[gd_scene load_steps=14 format=3 uid="uid://ce27hgsvrniyy"]

[ext_resource type="Script" path="res://scripts/ui/pause_menu.gd" id="1_g26mq"]
[ext_resource type="Animation" uid="uid://cgsm4tyyuea6" path="res://resources/animations/menus/pause_menu/open_pause_menu.res" id="2_6lo2q"]
[ext_resource type="Script" path="res://scripts/!resources/ui/interfaces/anchor.gd" id="3_nog6g"]
[ext_resource type="Animation" uid="uid://dfnn5qteqox28" path="res://resources/animations/menus/pause_menu/close_pause_menu.res" id="3_wwxc0"]
[ext_resource type="Animation" uid="uid://bi2by4rukg6fn" path="res://resources/animations/menus/pause_menu/reset_pause_menu.res" id="4_85710"]
[ext_resource type="Script" path="res://scripts/!nodes/ui/interface.gd" id="5_dk67d"]
[ext_resource type="Script" path="res://scripts/!resources/ui/interfaces/margin.gd" id="7_6vbjr"]
[ext_resource type="Script" path="res://scripts/!resources/ui/interfaces/auto_anchor.gd" id="8_jfidt"]
[ext_resource type="PackedScene" uid="uid://ck1mnq1wjsx4b" path="res://scenes/ui/default_button.tscn" id="9_scypv"]

[sub_resource type="Resource" id="Resource_wfiw6"]
script = ExtResource("3_nog6g")
parent_pathes = Array[NodePath]([NodePath("")])
presets = Array[int]([9])
termini = Array[Vector2]([Vector2(0, 0)])
weights = Array[Vector2]([Vector2(1, 1)])

[sub_resource type="Resource" id="Resource_fefee"]
script = ExtResource("7_6vbjr")
margin_reference_path = NodePath("")
trim_reference_margin = true
margin_left = 0.0
margin_top = 0.0
margin_right = 0.0
margin_bottom = 0.1

[sub_resource type="Resource" id="Resource_ly0pr"]
script = ExtResource("8_jfidt")
mode = 0
direction = 8
margin = SubResource("Resource_fefee")

[sub_resource type="Resource" id="Resource_hnc0p"]
script = ExtResource("3_nog6g")
parent_pathes = Array[NodePath]([NodePath("../Buttons")])
presets = Array[int]([6])
termini = Array[Vector2]([Vector2(0, 0)])
weights = Array[Vector2]([Vector2(1, 1)])

[node name="PauseMenu" type="Node2D"]
visible = false
script = ExtResource("1_g26mq")
open_animation = &"open_pause_menu"
close_animation = &"close_pause_menu"
reset_animation = &"reset_pause_menu"
animations = Array[Animation]([ExtResource("2_6lo2q"), ExtResource("3_wwxc0"), ExtResource("4_85710")])

[node name="Buttons" type="Node2D" parent="."]
script = ExtResource("5_dk67d")
origin_preset = 1
anchor = SubResource("Resource_wfiw6")
auto_anchor = SubResource("Resource_ly0pr")

[node name="DefaultButton" parent="Buttons" instance=ExtResource("9_scypv")]
text = "Return"

[node name="DefaultButton2" parent="Buttons" instance=ExtResource("9_scypv")]
text = "Settings"

[node name="DefaultButton3" parent="Buttons" instance=ExtResource("9_scypv")]
text = "Quit"

[node name="Title" type="Node2D" parent="."]
script = ExtResource("5_dk67d")
origin_preset = 3
anchor = SubResource("Resource_hnc0p")
scaling_mode = 1
keep_aspect_mode = 1
scaling_step = Vector2(1, 1)

[node name="Text" type="Label" parent="Title"]
texture_filter = 1
offset_right = 28.0
offset_bottom = 24.0
text = "Menu"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Buttons/DefaultButton" to="." method="_on_return_button"]
[connection signal="pressed" from="Buttons/DefaultButton2" to="." method="_on_settings_button"]
[connection signal="pressed" from="Buttons/DefaultButton3" to="." method="_on_quit_button"]
